--- a/sass/components/Home.scss
+++ b/sass/components/Home.scss
@@ -1,2 +1,33 @@
+.gridContain {
+	flex-direction: row;
+   	flex-wrap: wrap;
+}
 
+.gridTile {
+	height: 200;
+	width: 300;
+	background-color: $darkGrey;
+	justify-content: center;
+	margin-left: 50;
+	margin-bottom: 50;
+}
+
+.tileBackground {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 200;
+	width: 300;
+}
+
+.tileName {
+	text-align: center;
+	font-size: 24px;
+}
+
+.tileDescription {
+	text-align: center;
+	margin-top: 15px;
+	font-size: 18px;
+}
 
