demo on real tv with good redux/router/native combo

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,18 @@ $b_font: skolar-sans-latin, 'Proxima Nova', sans-serif;*/
   /*font-family: SourceSansPro-Light;*/ }
 
 .body {
-  flex: 1;
-  margin-top: 20px; }
+  flex: 1; }
+
+.bodyHeader {
+  height: 200;
+  flex-direction: column;
+  justify-content: center; }
+
+.bodyHeaderText {
+  text-align: center;
+  align-self: center;
+  font-size: 48;
+  color: #747474; }
 
 .btn {
   background-color: #CF5B6A;
@@ -150,24 +160,31 @@ $b_font: skolar-sans-latin, 'Proxima Nova', sans-serif;*/
 
 .gridTile {
   height: 200;
-  width: 300;
+  /*width: 300;*/
   background-color: #747474;
   justify-content: center;
   margin-left: 50;
   margin-bottom: 50; }
 
-.tileBackground {
+.tileBackground, .tileContain {
   position: absolute;
   top: 0;
   left: 0;
-  height: 200;
-  width: 300; }
+  right: 0;
+  bottom: 0; }
+
+.tileContain {
+  background-color: white; }
 
 .tileName {
   text-align: center;
-  font-size: 24px; }
+  font-size: 24px;
+  background-color: transparent;
+  color: white; }
 
 .tileDescription {
   text-align: center;
   margin-top: 15px;
-  font-size: 18px; }
+  font-size: 18px;
+  background-color: transparent;
+  color: white; }
