--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,4 +17,4 @@
 @import "components/Browse";
 @import "components/Project";
 @import "components/CompareAssets";
-
+@import "components/AssetRank";
