--- a/sass/components/Browse.scss
+++ b/sass/components/Browse.scss
@@ -1,6 +1,7 @@
 .gridContain {
 	flex-direction: row;
    	flex-wrap: wrap;
+   	padding-top: 70px;
 }
 
 .tileBox {
@@ -30,11 +31,11 @@
 
 .tileName {
 	font-family: $bFont;
-	font-weight: 300;
+	font-weight: 400;
 	text-align: center;
 	font-size: 28px;
 	background-color: transparent;
-	color: $black;
+	color: $darkGrey;
 	margin-top: 25;
 }
 
