--- a/sass/components/Project.scss
+++ b/sass/components/Project.scss
@@ -1,3 +1,9 @@
+.projectContain {
+	flex-direction: row;
+   	flex-wrap: wrap;
+   	padding-top: 50;
+}
+
 .viewMenu {
 	margin-right: 50;
 }
@@ -20,4 +26,60 @@
 	right: 0;
 	bottom: 0;
 	border-radius: 5px;
+}
+
+.slideTile {
+	margin-bottom: 50;
+	border-radius: 5;
+}
+
+.slideTile, .slideContain {
+	flex-direction: row;
+   	flex-wrap: wrap;
+   	border-radius: 5;
+}
+
+.tileImage {
+	justify-content: center;
+	border-radius: 5;
+}
+
+.imageContain, .imageBackground {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	border-radius: 5;
+}
+
+.imageBackground {
+	overflow: visible;
+	border-radius: 5px;
+}
+
+.slideTileInfo {
+	/*background-color: #F1F1F1;*/
+	padding: 25px;
+}
+
+.slideTileName {
+	font-family: $hFont;
+	text-align: left;
+	color: $darkGrey;
+	font-size: 36;
+}
+
+.slideTileDescription {
+	font-family: $hFont;
+	text-align: left;
+	color: $darkGrey;
+	font-size: 24;
+	margin-top: 10;
+}
+
+.checkmarkIcon {
+	width: 20;
+	height: 20;
+	background-color: red;
 }
