--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,3 +18,4 @@
 @import "components/Project";
 @import "components/CompareAssets";
 @import "components/AssetRank";
+@import "components/SimpleHeader";
