--- a/sass/common/format.scss
+++ b/sass/common/format.scss
@@ -1,22 +1,39 @@
 .body {
 	flex: 1;
-	background-color: white;
+	/*background-color: white;*/
 }
 
-.bodyHeader {
+.bodyBack {
+	flex: 1;
+}
+
+.bodyHeader, .bodyHeaderContain {
 	height: 170;
 	flex-direction: column;
    	justify-content: center;
-   	background-color: $white;
+   	/*background-color: $white;*/
+}
+
+.bodyHeaderContain {
+	z-index: 20;
+}
+
+.bodyHeaderBlur {
+	position: absolute;
+	height: 170;
+	top: 0;
+	left: 0;
+	z-index: 10;
 }
 
 .bodyHeaderText {
 	font-family: $hFont;
-	font-weight: 300;
+	font-weight: 400;
 	text-align: center;
 	align-self: center;
 	font-size: 48;
-	color: $black;
+	color: white;
+	background-color: transparent;
 }
 
 .leftCtrls {
@@ -43,10 +60,12 @@
 .headerLinkText {
 	@extend .btnText;
 	font-weight: 400;
+	color: white;
 }
 
 .headerLinkIcon {
-	left: -5px;
+	margin-right: 7px;
+	top: 4;
 }
 
 .inlineContain {
