finishing new navigation on tvOS. needs correct font linking. believe I lost some work along the way

--- a/app/sass/vars.scss
+++ b/app/sass/vars.scss
@@ -66,5 +66,8 @@ $tightShadow: 	rgba(0, 0, 0, 0.4) 0px 1px 1px 0px;
 $tightInset: 	rgba(0, 0, 0, 0.2) 0px 1px 5px 0px inset;
 $bigShadow: 	0px 2px 4px rgba(0,0,0,0.25);
 
-$hFont: Azo Sans;
-$bFont: Skolar Sans Latin;
+// $hFont: Azo Sans;
+// $hFont: Azo Sans;
+// $bFont: Skolar Sans Latin;
+$hFont: American Typewriter;
+$bFont: American Typewriter;
