start on refreshed interface

--- a/app/sass/common/format.scss
+++ b/app/sass/common/format.scss
@@ -3,8 +3,18 @@
 	/*background-color: white;*/
 }
 
+.appBody {
+	flex: 1;
+	background-color: white;
+}
+
 .bodyBack {
 	flex: 1;
+}
+
+.inlineContain {
+	flex-direction: row;
+   	flex-wrap: wrap;
 }
 
 .bodyHeader, .bodyHeaderContain {
@@ -72,5 +82,3 @@
 	flex-direction: row;
    	flex-wrap: wrap;
 }
-
-
