--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -13,7 +13,7 @@
 @import "common/dialog";
 
 @import "components/App";
-@import "components/Home";
+@import "components/Login";
 @import "components/Browse";
 @import "components/Project";
 @import "components/CompareAssets";
