--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -19,3 +19,5 @@
 @import "components/CompareAssets";
 @import "components/AssetRank";
 @import "components/SimpleHeader";
+@import "components/TabHeader";
+@import "components/FullscreenAsset";
