--- a/app/sass/common/forms.scss
+++ b/app/sass/common/forms.scss
@@ -1,9 +1,10 @@
 .textInput {
 	@extend .commonText;
-	height: 52px;
-	background-color: transparent;
-	font-size: 18px;
+	background-color: rgba(255, 255, 255, 0.7);
+	font-size: 22px;
 	font-weight: 400;
+	border-radius: 5px;
+	padding: 18 0;
 }
 
 .pickerInput {
