--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -16,6 +16,7 @@
 @import "components/Login";
 @import "components/Browse";
 @import "components/Project";
+@import "components/Settings";
 @import "components/CompareAssets";
 @import "components/AssetRank";
 @import "components/SimpleHeader";
