--- a/app/sass/components/Project.scss
+++ b/app/sass/components/Project.scss
@@ -63,3 +63,16 @@
   top: 22;
   right: 25;
 }
+
+.checkmarkContainer {
+  width: 40;
+  height: 40;
+  background-color: $pink;
+  border-radius: 50;
+  position: absolute;
+  top: 15;
+  right: 15;
+  padding: 6;
+  border-color: white;
+  border-width: 2;
+}
